Rozbudowa architektury projektu aplikacji mobilnej i serwera REST.

--- a/MobileApplication/app/src/main/res/values/styles.xml
+++ b/MobileApplication/app/src/main/res/values/styles.xml
@@ -1,6 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
+    <!--<style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">-->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -13,8 +14,10 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <!--<style name="AppTheme.AppBarOverlay" parent="android:ThemeOverlay.Material.Dark.ActionBar" />-->
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
+    <!--<style name="AppTheme.PopupOverlay" parent="android:ThemeOverlay.Material.Light" />-->
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
