--- a/MobileApplication/app/src/main/res/layout/app_bar_main.xml
+++ b/MobileApplication/app/src/main/res/layout/app_bar_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pl.polsl.mateusz.chudy.mobileapplication.MainActivity">
+    tools:context="pl.polsl.mateusz.chudy.mobileapplication.activity.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
