--- a/MobileApplication/app/src/main/res/layout/activity_login.xml
+++ b/MobileApplication/app/src/main/res/layout/activity_login.xml
@@ -50,10 +50,10 @@
                 android:layout_height="wrap_content">
 
                 <AutoCompleteTextView
-                    android:id="@+id/email"
+                    android:id="@+id/username"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="@string/prompt_email"
+                    android:hint="@string/prompt_username"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
                     android:singleLine="true" />
@@ -72,8 +72,7 @@
                     android:imeActionId="6"
                     android:imeActionLabel="@string/action_sign_in"
                     android:imeOptions="actionUnspecified"
-                    android:inputType="number|numberDecimal"
-                    android:digits="0123456789."
+                    android:inputType="textPassword"
                     android:maxLines="1"
                     android:singleLine="true" />
 
