Uruchomienie komunikacji aplikacji mobilnej z serwerem Szablony serwisów aplikacji mobilnej i prosty interfejs testowy z przyciskami

--- a/MobileApplication/app/src/main/res/layout/content_main.xml
+++ b/MobileApplication/app/src/main/res/layout/content_main.xml
@@ -11,10 +11,58 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text="Hello User!"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/blue_switch_on_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Blue Switch On"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.064"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.671" />
+
+    <Button
+        android:id="@+id/blue_switch_off_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Blue Switch Off"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.057"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.816" />
+
+    <Button
+        android:id="@+id/red_switch_on_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Red Switch On"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.937"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.671" />
+
+    <Button
+        android:id="@+id/red_switch_off_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Red Switch Off"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.936"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.816" />
 
 </android.support.constraint.ConstraintLayout>
