--- a/MobileApplication/app/src/main/res/layout/fragment_modules.xml
+++ b/MobileApplication/app/src/main/res/layout/fragment_modules.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent">
 
         <Button
-            android:id="@+id/modules_add_module"
+            android:id="@+id/modules_add_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -32,7 +32,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/modules_add_module" />
+            app:layout_constraintTop_toBottomOf="@+id/modules_add_button" />
 
     </android.support.constraint.ConstraintLayout>
 
