--- a/MobileApplication/app/src/main/res/layout/fragment_room_manipulation.xml
+++ b/MobileApplication/app/src/main/res/layout/fragment_room_manipulation.xml
@@ -1,9 +1,61 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="pl.polsl.mateusz.chudy.mobileapplication.view.fragments.RoomManipulationFragment">
 
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/room_manipulation_icon_room"
+            android:layout_width="152dp"
+            android:layout_height="126dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/ic_room" />
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/room_manipulation_name_text_input_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="84dp"
+            android:gravity="bottom|center"
+            app:layout_constraintTop_toBottomOf="@+id/room_manipulation_icon_room"
+            tools:layout_editor_absoluteX="0dp">
+
+            <EditText
+                android:id="@+id/room_manipulation_name_edit_text"
+                android:layout_width="308dp"
+                android:layout_height="45dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:hint="@string/prompt_name"
+                android:inputType="text"
+                android:maxLines="1"
+                android:singleLine="true" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:id="@+id/room_manipulation_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/room_manipulation_name_text_input_layout"
+            app:layout_constraintVertical_bias="0.435" />
+
+
+    </android.support.constraint.ConstraintLayout>
 
 </FrameLayout>
