--- a/MobileApplication/app/src/main/res/values/colors.xml
+++ b/MobileApplication/app/src/main/res/values/colors.xml
@@ -3,7 +3,9 @@
     <color name="colorPrimary">#ff424242</color>
     <color name="colorPrimaryDark">#303030</color>
     <color name="colorPrimaryLight">#757575</color>
-    <color name="colorAccent">#3F51B5</color>
+    <color name="colorAccent">#3f51b5</color>
     <color name="colorAccentDark">#283593</color>
     <color name="colorAccentLight">#536DFE</color>
+    <color name="colorGreen">#006400</color>
+    <color name="colorRed">#990000</color>
 </resources>
